style(footer): fix the styles, spacing and bgs

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,17 +1,20 @@
 @use './mixins';
 
 .site-footer {
+  background-color: #555;
+
   @include mixins.mq('tablet-wide', max) {
     padding-bottom: 60px;
   }
 
   > .menus {
-    background-color: #555;
     color: #fff;
     @include mixins.flexBox(space-between, flex-start);
     flex: 0 1 auto;
     flex-direction: row;
     flex-wrap: wrap;
+    margin: 0 auto;
+    max-width: 1600px;
     padding: 1.5rem 1rem;
 
     a {
@@ -164,11 +167,14 @@
 
   > .infos-copyright {
     background-color: #444;
-    padding: 20px 1rem;
 
     address {
       color: #fff;
+      display: block;
       font-style: normal;
+      margin: 0 auto;
+      max-width: 1600px;
+      padding: 20px 1rem;
     }
   }
 }
